# telecom_MLOps-train-

./: .env_example  .gitignore  Makefile  README.md  classification_report.txt  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-cd.yml
data/raw/: telecom.csv.dvc
notebooks/: churn_rf_model_optimized.pkl  cls_report.txt  test.ipynb  test_pipeline_LogReg_RF.ipynb  test_stats_EDA.ipynb
src/: __init__.py
src/data/: clean_data.py
src/features/: add_features.py
src/ml_models/: model.py
src/model/: evaluate.py  prepare_datasets.py  train.py
src/setup/: mlflow_setup.py
